--- a/SamplesGenerator/CMakeLists.txt
+++ b/SamplesGenerator/CMakeLists.txt
@@ -5,6 +5,10 @@ project("SamplesGenerator")
 set(QHULL_SOURCE_DIR $ENV{QHULL_SRC_PATH})
 set(QHULL_BIN_DIR $ENV{QHULL_BUILD_PATH})
 
+if(DEFINED ENV{PARDISO_LIB_PATH})
+	set(IS_PARDISO_AVAILABLE ON)
+endif()
+
 file(GLOB src "*.cpp")
 file(GLOB headers "*.h")
 
@@ -32,6 +36,10 @@ include_directories(${PROJECT_SOURCE_DIR}/../StepperCPU/include)
 add_subdirectory(${PROJECT_SOURCE_DIR}/../StepperCPU ${CMAKE_CURRENT_BINARY_DIR}/StepperCPU)
 link_directories(${PROJECT_SOURCE_DIR}/../lib)  #for blas
 
+if (IS_PARDISO_AVAILABLE)
+	link_directories($ENV{PARDISO_LIB_PATH})
+endif()
+
 # stepper cuda
 #include_directories(${PROJECT_SOURCE_DIR}/../StepperCuda/include)
 #add_subdirectory(${PROJECT_SOURCE_DIR}/../StepperCuda ${CMAKE_CURRENT_BINARY_DIR}/StepperCuda)
@@ -39,6 +47,9 @@ link_directories(${PROJECT_SOURCE_DIR}/../lib)  #for blas
 add_executable (SamplesGenerator ${src})
 
 target_link_libraries(SamplesGenerator ${VTK_LIBRARIES} vecmath FEMLib StepperCPU libopenblas ${Utilities_LIBS})
+if (IS_PARDISO_AVAILABLE)
+	target_link_libraries(SamplesGenerator libpardiso500-WIN-X86-64)
+endif()
 
 # copy dlls to build directory
 option(COPY_DLL_TO_BUILD_DIR "copy dlls to build directory" ON)
@@ -46,8 +57,15 @@ if (COPY_DLL_TO_BUILD_DIR)
 	add_custom_command(TARGET SamplesGenerator POST_BUILD
 					   COMMAND set "var=${PROJECT_SOURCE_DIR}"
 					   COMMAND set "var=%var:/=\\%"
-					   COMMAND echo "%var%"
 					   COMMAND copy "%var%\\..\\dll\\*.dll" "C:\\Users\\melina\\Documents\\Projects\\fem\\SamplesGenerator\\build\\$<CONFIGURATION>" 
 					   COMMENT "copying dlls …"
 				   )
+	if (IS_PARDISO_AVAILABLE)
+		add_custom_command(TARGET SamplesGenerator POST_BUILD
+						   COMMAND set "var=$ENV{PARDISO_LIB_PATH}"
+						   COMMAND set "var=%var:/=\\%"
+						   COMMAND copy "%var%\\*.dll" "C:\\Users\\melina\\Documents\\Projects\\fem\\SamplesGenerator\\build\\$<CONFIGURATION>" 
+						   COMMENT "copying dlls …"
+				   )
+	endif()
 endif()
