--- a/runLinux/CMakeLists.txt
+++ b/runLinux/CMakeLists.txt
@@ -4,6 +4,8 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 #find_package(Eigen3)
 #include_directories (${EIGEN3_INCLUDE_DIR})
 add_definitions( -DPARDISO_AVAILABLE)
+ADD_DEFINITIONS(--std=c++0x)
+INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../Utilities/include")
 
 add_subdirectory(../femlib       "${CMAKE_CURRENT_BINARY_DIR}/femlib")
 add_subdirectory(../viewer       "${CMAKE_CURRENT_BINARY_DIR}/viewer")
@@ -11,7 +13,7 @@ add_subdirectory(../vecmath      "${CMAKE_CURRENT_BINARY_DIR}/vecmath")
 add_subdirectory(../StepperCPU   "${CMAKE_CURRENT_BINARY_DIR}/StepperCPU")
 add_subdirectory(../StepperIpopt "${CMAKE_CURRENT_BINARY_DIR}/StepperIpopt")
 FILE(GLOB EXE_SRC "*.cpp")
-ADD_DEFINITIONS(--std=c++0x)
+
 INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../femlib/include")
 INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../vecmath/include")
 INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../viewer/include")
@@ -37,6 +39,6 @@ TARGET_LINK_LIBRARIES(Run openblas)
 TARGET_LINK_LIBRARIES(Run gfortran)
 TARGET_LINK_LIBRARIES(Run gomp)
 TARGET_LINK_LIBRARIES(Run png)
-TARGET_LINK_LIBRARIES(Run glfw3 X11  Xxf86vm Xrandr Xi)
+TARGET_LINK_LIBRARIES(Run glfw3 X11  Xxf86vm Xrandr Xi Xinerama Xcursor)
 TARGET_LINK_LIBRARIES(Run GL GLU)
 TARGET_LINK_LIBRARIES(Run pthread )
