--- a/MaterialOpt/CMakeLists.txt
+++ b/MaterialOpt/CMakeLists.txt
@@ -12,26 +12,26 @@ add_subdirectory(../viewer       "${CMAKE_CURRENT_BINARY_DIR}/viewer")
 add_subdirectory(../vecmath      "${CMAKE_CURRENT_BINARY_DIR}/vecmath")
 add_subdirectory(../StepperCPU   "${CMAKE_CURRENT_BINARY_DIR}/StepperCPU")
 add_subdirectory(../StepperIpopt "${CMAKE_CURRENT_BINARY_DIR}/StepperIpopt")
+
+FILE(GLOB LIB_SRC "src/*.cpp")
+ADD_LIBRARY (MaterialOpt ${LIB_SRC})
+
 FILE(GLOB EXE_SRC "*.cpp")
 
 INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../femlib/include")
 INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../vecmath/include")
 INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../viewer/include")
 INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../StepperCPU/include")
-INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../StepperIpopt/include/coin")
-INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../StepperIpopt/include")
 
 LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/../lib-linux)
 
 INCLUDE_DIRECTORIES(include)
 ADD_EXECUTABLE(Run ${EXE_SRC})
 
-TARGET_LINK_LIBRARIES(Run StepperCPU)
-TARGET_LINK_LIBRARIES(Run StepperIpopt)
+TARGET_LINK_LIBRARIES(Run StepperCPU MaterialOpt)
 TARGET_LINK_LIBRARIES(Run FEMLib)
 TARGET_LINK_LIBRARIES(Run FEMViewer)
 TARGET_LINK_LIBRARIES(Run vecmath)
-TARGET_LINK_LIBRARIES(Run ipopt)
 TARGET_LINK_LIBRARIES(Run pardiso)
 #TARGET_LINK_LIBRARIES(Run coinmumps)
 
