--- a/unitTests/CMakeLists.txt
+++ b/unitTests/CMakeLists.txt
@@ -23,12 +23,6 @@ else()
   link_directories(${QHULL_BIN_DIR}/Debug)
 endif()
 
-# math
-include_directories(${PROJECT_SOURCE_DIR}/../vecmath/include)
-if (NOT TARGET vecmath)
-    add_subdirectory(${PROJECT_SOURCE_DIR}/../vecmath ${CMAKE_CURRENT_BINARY_DIR}/vecmath)
-endif() 
-
 # femlib
 include_directories(${PROJECT_SOURCE_DIR}/../femlib/include)
 if (NOT TARGET FEMLib)
@@ -56,7 +50,7 @@ endif()
 
 add_executable (Run ${src})
 
-target_link_libraries(Run vecmath FEMLib MaterialOpt Utilities StepperCPU libopenblas FEMViewer ${Utilities_LIBS})
+target_link_libraries(Run FEMLib MaterialOpt Utilities StepperCPU libopenblas FEMViewer ${Utilities_LIBS})
 if(MSVC)
   target_link_libraries(Run glfw3 opengl32 glu32)
 endif()
