--- a/explorer/CMakeLists.txt
+++ b/explorer/CMakeLists.txt
@@ -30,10 +30,10 @@ add_subdirectory(${PROJECT_SOURCE_DIR}/../Utilities ${CMAKE_CURRENT_BINARY_DIR}/
 link_directories($ENV{QHULL_BUILD_PATH})
 
 # math
-include_directories(${PROJECT_SOURCE_DIR}/../vecmath/include)
-if (NOT TARGET vecmath)
-	add_subdirectory(${PROJECT_SOURCE_DIR}/../vecmath ${CMAKE_CURRENT_BINARY_DIR}/vecmath)
-endif() 
+#include_directories(${PROJECT_SOURCE_DIR}/../vecmath/include)
+#if (NOT TARGET vecmath)
+#	add_subdirectory(${PROJECT_SOURCE_DIR}/../vecmath ${CMAKE_CURRENT_BINARY_DIR}/vecmath)
+#endif() 
 
 # femlib
 include_directories(${PROJECT_SOURCE_DIR}/../femlib/include)
@@ -43,7 +43,7 @@ endif()
 
 add_executable (explorer ${src} ${QtMocs} ${QtUIs})
 
-target_link_libraries(explorer ${QT_QTGUI_LIBRARY} ${QT_QTCORE_LIBRARY} ${VTK_LIBRARIES} vecmath FEMLib ${Utilities_LIBS})
+target_link_libraries(explorer ${QT_QTGUI_LIBRARY} ${QT_QTCORE_LIBRARY} ${VTK_LIBRARIES} FEMLib ${Utilities_LIBS})
 
 # copy VTK dll to runtime directory
 option(COPY_DLL_TO_BUILD_DIR "copy dlls to build directory" ON)
