Visualization results of mds

--- a/MicrostructuresAnalysis/CMakeLists.txt
+++ b/MicrostructuresAnalysis/CMakeLists.txt
@@ -7,10 +7,13 @@ INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../include")
 
 # utilities
 include_directories(${PROJECT_SOURCE_DIR}/../Utilities/include)
+add_subdirectory(${PROJECT_SOURCE_DIR}/../Utilities ${CMAKE_CURRENT_BINARY_DIR}/Utilities)
 
 # femlib (for Eigen)
 include_directories(${PROJECT_SOURCE_DIR}/../femlib/include)
+if (NOT TARGET FEMLib)
 add_subdirectory(${PROJECT_SOURCE_DIR}/../femlib ${CMAKE_CURRENT_BINARY_DIR}/femlib)
+endif()
 
 # sampler utilities
 include_directories(${PROJECT_SOURCE_DIR}/../SamplerUtilities/include)
@@ -18,7 +21,7 @@ add_subdirectory(${PROJECT_SOURCE_DIR}/../SamplerUtilities ${CMAKE_CURRENT_BINAR
 
 add_library(MicrostructuresAnalysis ${LIB_SRC})
 
-set(MicrostructuresAnalysis_LIBS MicrostructuresAnalysis ${SamplerUtilities_LIBS} PARENT_SCOPE)
+set(MicrostructuresAnalysis_LIBS MicrostructuresAnalysis ${SamplerUtilities_LIBS} ${Utilities_LIBS} PARENT_SCOPE)
 
 SET(LIB_TYPE STATIC)
 
